--- a/index.html
+++ b/index.html
@@ -9,28 +9,28 @@
     <link rel="icon" type="image/x-icon" href="assets/img/favicon2.ico">
 </head>
 <body>
-<div class="wrapper-header-toolbar">
-    <div class="container-header-toolbar">
-        <div class="header-toolbar">
-            <div class="header-toolbar-left-block">
-                <div class="header-toolbar-left-block-help header-toolbar-blocks">
+<div class="wrapper-toolbar">
+    <div class="container-toolbar">
+        <div class="toolbar">
+            <div class="toolbar-left-part">
+                <div class="toolbar-blocks">
                     <a href="#" class="navigation-link">Помощь</a>
                 </div>
-                <div class="header-toolbar-left-block-promo header-toolbar-blocks">
+                <div class="toolbar-blocks">
                     <a href="#" class="navigation-link">Промоакции</a>
                 </div>
             </div>
 
-            <div class="header-toolbar-right-block">
-                <div class="header-toolbar-right-block-sell header-toolbar-blocks">
+            <div class="toolbar-right-part">
+                <div class="toolbar-blocks">
                     <a href="#" class="navigation-link">Начать продавать на agrozavr.com</a>
                 </div>
-                <div class="header-toolbar-right-block-login header-toolbar-blocks">
-                    <button class="button-sign-in navigation-link">Войти</button>
+                <div class="toolbar-blocks">
+                    <button class="navigation-link">Войти</button>
                     &nbsp; &nbsp;
-                    <span class="span-spacing-column">|</span>
+                    <span>|</span>
                     &nbsp; &nbsp;
-                    <button class="button-register navigation-link">Зарегистрироваться</button>
+                    <button class="navigation-link">Зарегистрироваться</button>
                 </div>
             </div>
         </div>
@@ -49,6 +49,7 @@
                     <div class="header-top-logo-container-block">
                         <div class="header-top-logo-container-h1">
                             <h1 class="main-logo-title">Агрозавр</h1>
+                            <p class="logo-description">Сельскохозяйственная торговая площадка<p>
                         </div>
                     </div>
                 </div>
@@ -108,7 +109,7 @@
                             <a href="#" class="category-link">
                                 <div class="category-item">
                                     <div class="category-item-inner">
-                                        <div class="category-item-img"><img src="assets/img/icons/agricultural-vehicles-equipment.png"></div>
+                                        <div class="category-item-img"><img src="assets/img/icons/agricultural-vehicles-equipment.png" alt=""></div>
                                         <div class="category-item-h2"><h2 class="txt">Сельскохозяйственная техника</h2></div>
                                     </div>
                                     <div class="arrow-right">
@@ -164,7 +165,7 @@
                         <a href="#" class="category-link">
                             <div class="category-item">
                                 <div class="category-item-inner">
-                                    <div class="category-item-img"><img src="assets/img/icons/farm-products.png"></div>
+                                    <div class="category-item-img"><img src="assets/img/icons/farm-products.png" alt=""></div>
                                     <div class="category-item-h2"><h2 class="txt">Сельскохозяйственная продукция, сырье</h2></div>
                                 </div>
                                 <div class="arrow-right">
@@ -175,7 +176,7 @@
                         <a href="#" class="category-link">
                             <div class="category-item">
                                 <div class="category-item-inner">
-                                    <div class="category-item-img"><img src="assets/img/icons/machinery.png"></div>
+                                    <div class="category-item-img"><img src="assets/img/icons/machinery.png" alt=""></div>
                                     <div class="category-item-h2"><h2 class="txt">Оборудование</h2></div>
                                 </div>
                                 <div class="arrow-right">
@@ -186,7 +187,7 @@
                         <a href="#" class="category-link">
                             <div class="category-item">
                                 <div class="category-item-inner">
-                                    <div class="category-item-img"><img src="assets/img/icons/agricultural-products.png"></div>
+                                    <div class="category-item-img"><img src="assets/img/icons/agricultural-products.png" alt=""></div>
                                     <div class="category-item-h2"><h2 class="txt">Продукты переработки</h2></div>
                                 </div>
                                 <div class="arrow-right">
@@ -197,7 +198,7 @@
                         <a href="#" class="category-link">
                             <div class="category-item">
                                 <div class="category-item-inner">
-                                    <div class="category-item-img"><img src="assets/img/icons/agricultural-real-estate.png"></div>
+                                    <div class="category-item-img"><img src="assets/img/icons/agricultural-real-estate.png" alt=""></div>
                                     <div class="category-item-h2"><h2 class="txt">Земли и объекты с/х недвижимости</h2></div>
                                 </div>
                                 <div class="arrow-right">
@@ -208,7 +209,7 @@
                         <a href="#" class="category-link">
                             <div class="category-item">
                                 <div class="category-item-inner">
-                                    <div class="category-item-img"><img src="assets/img/icons/animal-feed.png"></div>
+                                    <div class="category-item-img"><img src="assets/img/icons/animal-feed.png" alt=""></div>
                                     <div class="category-item-h2"><h2 class="txt">Корма для с/х животных и птиц</h2></div>
                                 </div>
                                 <div class="arrow-right">
@@ -219,7 +220,7 @@
                         <a href="#" class="category-link">
                             <div class="category-item">
                                 <div class="category-item-inner">
-                                    <div class="category-item-img"><img src="assets/img/icons/Services.png"></div>
+                                    <div class="category-item-img"><img src="assets/img/icons/Services.png" alt=""></div>
                                     <div class="category-item-h2"><h2 class="txt">Услуги</h2></div>
                                 </div>
                                 <div class="arrow-right">
@@ -230,7 +231,7 @@
                         <a href="#" class="category-link">
                             <div class="category-item">
                                 <div class="category-item-inner">
-                                    <div class="category-item-img"><img src="assets/img/icons/fertilizers.png"></div>
+                                    <div class="category-item-img"><img src="assets/img/icons/fertilizers.png" alt=""></div>
                                     <div class="category-item-h2"><h2 class="txt">Агрохимия</h2></div>
                                 </div>
                                 <div class="arrow-right">
@@ -241,7 +242,7 @@
                         <a href="#" class="category-link">
                             <div class="category-item">
                                 <div class="category-item-inner">
-                                    <div class="category-item-img"><img src="assets/img/icons/packaging.png"></div>
+                                    <div class="category-item-img"><img src="assets/img/icons/packaging.png" alt=""></div>
                                     <div class="category-item-h2"><h2 class="txt">Тара и упаковка</h2></div>
                                 </div>
                                 <div class="arrow-right">
@@ -252,7 +253,7 @@
                         <a href="#" class="category-link">
                             <div class="category-item">
                                 <div class="category-item-inner">
-                                    <div class="category-item-img"><img src="assets/img/icons/miscellaneous.png"></div>
+                                    <div class="category-item-img"><img src="assets/img/icons/miscellaneous.png" alt=""></div>
                                     <div class="category-item-h2"><h2 class="txt">Прочее</h2></div>
                                 </div>
                                 <div class="arrow-right">
@@ -5387,7 +5388,7 @@
             </div>
 
             <div class="footer-spacer"></div>
-            
+
             <div class="footer-contacts">
                 <span class="footer_text">
                     2022 © АгроЗавр - сельскохозяйственная торговая площадка
@@ -5398,16 +5399,16 @@
                 <span class="footer_text">
                     Телефон:
                 </span>
-                <span class="footer_text">
+                <span class="footer_text nowrap">
                     <a href="tel:+79218694505">+7 (921) 869-45-05</a>
                 </span>
                 <span class="footer_text">
                     |
                 </span>
-                <span class="footer_text">
+                <span class="footer_text nowrap">
                     E-mail:
                 </span>
-                <span class="footer_text">
+                <span class="footer_text nowrap">
                     <a href="mailto:info@agrozavr.com">info@agrozavr.com</a>
                 </span>
 
@@ -5416,6 +5417,8 @@
     </div>
 
 </footer>
+
+
 
 
 </html>
