--- a/index.html
+++ b/index.html
@@ -26,11 +26,8 @@
                     <a href="#" class="navigation-link">Начать продавать на agrozavr.com</a>
                 </div>
                 <div class="toolbar-blocks">
-                    <button class="navigation-link">Войти</button>
-                    &nbsp; &nbsp;
-                    <span>|</span>
-                    &nbsp; &nbsp;
-                    <button class="navigation-link">Зарегистрироваться</button>
+                    <button class="login-button navigation-link">Войти</button>
+                    <button class="reg-button navigation-link">Зарегистрироваться</button>
                 </div>
             </div>
         </div>
