--- a/index.html
+++ b/index.html
@@ -36,16 +36,16 @@
 </div>
 
 <header>
-    <div class="wrapper-header-top">
-        <div class="container-header-top">
-            <div class="wrapper-header-top-logo">
-                <div class="header-top-logo-container">
-                    <div class="header-top-logo-container-logo-img">
-                        <img src="assets/img/agrozavr-logo.svg" alt="логотип торговой площадки Агрозавр">
+    <div class="wrapper-header">
+        <div class="container-header">
+            <div class="wrapper-header-logo">
+                <div class="container-header-logo">
+                    <div class="container-logo-img">
+                        <img src="assets/img/agrozavr-logo.svg" alt="логотип торговой площадки Агрозавр" class="logo-img">
                     </div>
-                    <div class="header-top-logo-container-block">
-                        <div class="header-top-logo-container-h1">
-                            <h1 class="main-logo-title">Агрозавр</h1>
+                    <div class="container-logo-text">
+                        <div class="logo-text">
+                            <h1 class="logo-h1">Агрозавр</h1>
                             <p class="logo-description">Сельскохозяйственная торговая площадка<p>
                         </div>
                     </div>
@@ -85,11 +85,6 @@
         </div>
         
     </div>
-
-    <div class="header-bottom">
-
-    </div>
-
 
 </header>
 
