--- a/index.html
+++ b/index.html
@@ -5410,7 +5410,58 @@
 
 </footer>
 
+<div class="hh1">
+    <div class="wrapper-hh1">
+        <div class="container-hh1">
+            <div class="wrapper-hh1-logo">
+                <div class="container-hh1-logo">
+                    <div class="container-hh1-logo-img">
+                        <img src="assets/img/agrozavr-logo.svg" alt="логотип торговой площадки Агрозавр" class="hh1-logo-img">
+                    </div>
+                    <div class="container-hh1-logo-text">
+                        <div class="hh1-logo-text">
+                            <h1 class="hh1-logo-h1">Агрозавр</h1>
+                            <p class="hh1-logo-description">Сельскохозяйственная торговая площадка<p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="wrapper-hh1-top-searchbar-container">
+                <div class="hh1-top-searchbar-container">
+                    <div class="hh1-top-searchbar-container-form-holder">
+                        <form action="search" method="get" class="hh1-main-search-form">
+                            <div class="hh1-top-searchbar-form-inner-wrapper">
+                                <div class="hh1-top-searchbar-form-input-holder">
+                                    <input type="search" class="hh1-main-search-form-input" name="search_term" placeholder="Я ищу..." autocomplete="off" autocorrect="off" autocapitalize="off" value="">
+                                </div>
+                                <div class="hh1-main-search-form-button-holder">
+                                    <button type="submit" class="hh1-main-search-form-button">Найти</button>
+                                </div>
 
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+            <div class="wrapper-hh1-top-searchbar-region-button">
+                <div class="hh1-top-searchbar-region-button-holder">
+                    <button class="hh1-top-searchbar-region-button" type="button"><span class="header-top-searchbar-region-button-value">Россия</span>
+                        <div class="hh1-searchbar-region-button-svg-holder">
+                            <svg viewBox="0 0 20 20" focusable="false" aria-hidden="true" tabindex="-1" class="hh1-searchbar-region-button-svg" style="width: 16px; height: 16px;">
+                                <path d="M10.148 11.672l-4.941-4.94a1 1 0 10-1.414 1.414l6.355 6.354 6.354-6.354a1 1 0 10-1.414-1.414l-4.94 4.94z">
+                                </path>
+                            </svg>
+                        </div>
+                    </button>
+
+                </div>
+                
+            </div>
+        </div>
+        
+    </div>
+
+</div>
 
 
 </html>
