Header fixed for mobiles

--- a/index.html
+++ b/index.html
@@ -68,11 +68,12 @@
                     </div>
                 </div>
             </div>
-            <div class="wrapper-header-top-searchbar-region-button">
-                <div class="header-top-searchbar-region-button-holder">
-                    <button class="header-top-searchbar-region-button" type="button"><span class="header-top-searchbar-region-button-value">Россия</span>
+            <div class="wrapper-header-region-button">
+                <div class="container-header-region-button">
+                    <button class="header-region-button" type="button">
+                        <span class="header-region-button-value">Россия</span>
                         <div class="searchbar-region-button-svg-holder">
-                            <svg viewBox="0 0 20 20" focusable="false" aria-hidden="true" tabindex="-1" class="searchbar-region-button-svg" style="width: 16px; height: 16px;">
+                            <svg viewBox="0 0 20 20" focusable="false" aria-hidden="true" class="searchbar-region-button-svg" style="width: 16px; height: 16px;">
                                 <path d="M10.148 11.672l-4.941-4.94a1 1 0 10-1.414 1.414l6.355 6.354 6.354-6.354a1 1 0 10-1.414-1.414l-4.94 4.94z">
                                 </path>
                             </svg>
