slideout categories and slider

--- a/index.html
+++ b/index.html
@@ -89,12 +89,12 @@
 
 </header>
 
-<section class="wrapper-main-category-list">
-    <div class="container-main-category-list">
-        <div class="main-category-list-left-menu-container">
-            <div class="main-category-list-left-menu-inner">
-                <div class="main-category-list-name">
-                    <span class="main-category-list-name-txt">Товарные категории</span>
+<div class="wrapper-main-page-ad-block">
+    <div class="container-main-page-ad-block">
+        <div class="wrapper-slideout-categories">
+            <div class="slideout-categories">
+                <div class="slideout-categories-title">
+                    <span class="slideout-categories-title-txt">Товарные категории</span>
                 </div>
                 <ul class="main-category-ul">
                     <li class="main-category-li">
@@ -257,14 +257,14 @@
                 </ul>
             </div>
 
-        </div>
+        </div> <!-- wrapper-slideout-categories -->
 
-        <div class="wrapper_main-page-slider">
-            <div class="container_main-page-slider">
-                <input type="radio" name="r" id="mpsi1" checked>
-                <input type="radio" name="r" id="mpsi2">
-                <input type="radio" name="r" id="mpsi3">
-                <input type="radio" name="r" id="mpsi4">
+        <div class="wrapper-main-page-slider">
+            <div class="container-main-page-slider">
+                <input type="radio" name="r" class="mpsi" id="mpsi1" checked>
+                <input type="radio" name="r" class="mpsi" id="mpsi2">
+                <input type="radio" name="r" class="mpsi" id="mpsi3">
+                <input type="radio" name="r" class="mpsi" id="mpsi4">
 
                 <div class="main-page-slider_slides-container">
                     <div class="main-page-slider_slide"><img src="assets/img/Main-page-ads/test-300-1.jpg" alt="field"></div>
@@ -286,12 +286,12 @@
                     <label for="mpsi3"></label>
                     <label for="mpsi4"></label>
                 </div>
-            </div>
-        </div>
+            </div> <!-- container-main-page-slider -->
+        </div> <!-- "wrapper-main-page-slider -->
         
-    </div>
+    </div> <!-- container-main-page-ad-block -->
 
-</section>
+</div> <!-- wrapper-main-page-ad-block -->
 
 <div class="wrapper_main-page-category_block">
     <div class="main-page-category-block">
