tried to vertically center slider - need to try absolute positioning

--- a/index.html
+++ b/index.html
@@ -266,21 +266,21 @@
                 <input type="radio" name="r" class="mpsi" id="mpsi3">
                 <input type="radio" name="r" class="mpsi" id="mpsi4">
 
-                <div class="main-page-slider_slides-container">
-                    <div class="main-page-slider_slide"><img src="assets/img/Main-page-ads/test-300-1.jpg" alt="field"></div>
-                    <div class="main-page-slider_slide"><img src="assets/img/Main-page-ads/test-300-2.jpg" alt="harvester in a field"></div>
-                    <div class="main-page-slider_slide"><img src="assets/img/Main-page-ads/test-300-3.jpg" alt="freshly planted field"></div>
-                    <div class="main-page-slider_slide"><img src="assets/img/Main-page-ads/test-300-4.jpg" alt="tractor in a field"></div>
+                <div class="main-page-slider-slides-container">
+                    <div class="main-page-slider-slide"><img src="assets/img/Main-page-ads/test-300-1.jpg" alt="field"></div>
+                    <div class="main-page-slider-slide"><img src="assets/img/Main-page-ads/test-300-2.jpg" alt="harvester in a field"></div>
+                    <div class="main-page-slider-slide"><img src="assets/img/Main-page-ads/test-300-3.jpg" alt="freshly planted field"></div>
+                    <div class="main-page-slider-slide"><img src="assets/img/Main-page-ads/test-300-4.jpg" alt="tractor in a field"></div>
                 </div>
         
-                <div class="main-page_slider-navigation">
+                <div class="main-page-slider-navigation">
                     <label for="mpsi1"></label>
                     <label for="mpsi2"></label>
                     <label for="mpsi3"></label>
                     <label for="mpsi4"></label>
                 </div>
 
-                <div class="main-page-slider_controls">
+                <div class="main-page-slider-controls">
                     <label for="mpsi1"></label>
                     <label for="mpsi2"></label>
                     <label for="mpsi3"></label>
