--- a/index.html
+++ b/index.html
@@ -5241,7 +5241,7 @@
 <footer>
     <div class="wrapper-footer">
         <div class="footer-container">
-            <div class="content">
+            <div class="footer-content">
                 <ul class="footer_ul">
                     <li class="footer_li">
                         <a href="#" class="footer_link">
@@ -5301,36 +5301,23 @@
                     </li>
                 </ul>
 
-            </div>
+            </div> <!--footer-content -->
 
             <div class="footer-spacer"></div>
 
             <div class="footer-contacts">
-                <span class="footer_text">
+                <div class="footer_text">
                     2022 © АгроЗавр - сельскохозяйственная торговая площадка
-                </span>
-                <span class="footer_text">
-                    |
-                </span>
-                <span class="footer_text">
-                    Телефон:
-                </span>
-                <span class="footer_text nowrap">
-                    <a href="tel:+79218694505">+7 (921) 869-45-05</a>
-                </span>
-                <span class="footer_text">
-                    |
-                </span>
-                <span class="footer_text nowrap">
-                    E-mail:
-                </span>
-                <span class="footer_text nowrap">
-                    <a href="mailto:info@agrozavr.com">info@agrozavr.com</a>
-                </span>
-
+                </div>
+                <div class="footer_text">
+                    Телефон:<span class="footer_text nowrap"><a href="tel:+79218694505">+7 (921) 869-45-05</a></span>
+                </div>
+                <div class="footer_text nowrap">
+                    E-mail:<span class="footer_text nowrap"><a href="mailto:info@agrozavr.com">info@agrozavr.com</a></span>
+                </div>
             </div>
-        </div>
-    </div>
+        </div> <!--footer-container -->
+    </div> <!--wrapper-footer -->
 
 </footer>
 
