--- a/index.html
+++ b/index.html
@@ -793,6 +793,7 @@
 
             <div class="main-page-category">
                 <a href="#" class="main-page-banner_link">
+                    <div class="spacer-narrow"></div>
                     <h3 class="main-page-category-title">Сельскохозяйственная продукция, сырье</h3>
                     <div class="spacer"></div>
                 </a>
@@ -1286,6 +1287,7 @@
 
             <div class="main-page-category">
                 <a href="#" class="main-page-banner_link">
+                    <div class="spacer-narrow"></div>
                     <h3 class="main-page-category-title">Оборудование</h3>
                     <div class="spacer"></div>
                 </a>
@@ -1780,6 +1782,7 @@
 
             <div class="main-page-category">
                 <a href="#" class="main-page-banner_link">
+                    <div class="spacer-narrow"></div>
                     <h3 class="main-page-category-title">Продукты переработки</h3>
                     <div class="spacer"></div>
                 </a>
@@ -2273,6 +2276,7 @@
 
             <div class="main-page-category">
                 <a href="#" class="main-page-banner_link">
+                    <div class="spacer-narrow"></div>
                     <h3 class="main-page-category-title">Земли и объекты с/х недвижимости</h3>
                     <div class="spacer"></div>
                 </a>
@@ -2766,6 +2770,7 @@
 
             <div class="main-page-category">
                 <a href="#" class="main-page-banner_link">
+                    <div class="spacer-narrow"></div>
                     <h3 class="main-page-category-title">Корма для с/х животных и птиц</h3>
                     <div class="spacer"></div>
                 </a>
@@ -3259,6 +3264,7 @@
 
             <div class="main-page-category">
                 <a href="#" class="main-page-banner_link">
+                    <div class="spacer-narrow"></div>
                     <h3 class="main-page-category-title">Услуги</h3>
                     <div class="spacer"></div>
                 </a>
@@ -3752,6 +3758,7 @@
 
             <div class="main-page-category">
                 <a href="#" class="main-page-banner_link">
+                    <div class="spacer-narrow"></div>
                     <h3 class="main-page-category-title">Агрохимия</h3>
                     <div class="spacer"></div>
                 </a>
@@ -4245,6 +4252,7 @@
 
             <div class="main-page-category">
                 <a href="#" class="main-page-banner_link">
+                    <div class="spacer-narrow"></div>
                     <h3 class="main-page-category-title">Тара и упаковка</h3>
                     <div class="spacer"></div>
                 </a>
@@ -4738,6 +4746,7 @@
 
             <div class="main-page-category">
                 <a href="#" class="main-page-banner_link">
+                    <div class="spacer-narrow"></div>
                     <h3 class="main-page-category-title">Прочее</h3>
                     <div class="spacer"></div>
                 </a>
